...
                    )),
              ),
              SizedBox(
                width: 60,
              ),
              InkWell(
                key: Key("TopbarJobListing"),
                onTap: () async {
                  await Navigator.push(
              context,
              MaterialPageRoute(
                  builder: (context) => jobListingView(
                        user: user,
...
